Fix - line aoe token draggable area not aligning with image when rotated

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -4913,7 +4913,7 @@ div.sidebar__pane-content div.tooltip::after {
     pointer-events: none;
     z-index: 1;
 }
-.token img:not(.note-condition):not(.condition-img), .token [data-img], .token .token-image{
+.token img:not(.note-condition):not(.condition-img), .token [data-img]:not(.aoe-shape-line), .token .token-image{
     pointer-events:none !important;
 }
 
